--- a/style.css
+++ b/style.css
@@ -1,84 +1,83 @@
-/* Estilo geral para o body */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+:root {
+    --textColor: #ced4d7;
+    --white : #fffffd;
+    --primaryPurple: #9070ae;
+    --secondaryPurple: #c6b6d5;
+    --primaryGreen: #348379;
+    --secondaryGrren: #4cac9e;
+}
+
+html,
 body {
-font-family: Arial, sans-serif;
-margin: 0;
-padding: 0;
+    scroll-behavior: smooth;
+    font-size: 16px;
 }
 
-/* Estilo para o cabeçalho */
-header {
-background-color: #522585;
-color: white;
-padding: 25px 30px;
+.header {
+    background-color: var(--white);
+    min-height: 35px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 45px;
+    position: fixed;
+    right: 0;
+    left: 0;
+    box-shadow: 0.5px 0.5px 10px 0.5px rgba(0, 0, 0, 0.082);   
 }
 
-.intro-container {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        /* Espaço entre imagem e texto */
-    }
-
-    .intro-container img {
-        max-width: 200px;
-        /* Ajuste a largura máxima da imagem */
-        height: auto;
-        /* Mantém a proporção da imagem */
-    }
-
-    .intro-container p {
-        margin: 0;
-        /* Remove margens padrão do parágrafo */
-    }
-
-/* Estilo para o container que alinha o conteúdo */
-.container {
-display: flex;
-justify-content: space-between; /* Espaço entre o logo e os links */
-align-items: center; /* Alinha verticalmente ao centro */
+.header ul li a{
+    text-decoration: none;
 }
 
-/* Estilo para o logo */
-.logo {
-font-size: 24px;
-margin: 0;
+.header ul li {
+    text-decoration: none;
+    list-style: none;
 }
 
-/* Estilo para os links de navegação */
-nav {
-display: flex;
-}
-
-/* Estilo para a lista de links */
-.nav-links {
-list-style: none; /* Remove marcadores da lista */
-margin: 0;
-padding: 0;
-display: flex;
-}
-
-/* Estilo para cada item da lista */
-.nav-links li {
-margin-left: 20px; /* Espaçamento entre os links */
-}
-
-/* Estilo para os links */
-.nav-links a {
-color: white;
-text-decoration: none; /* Remove o sublinhado */
-font-size: 18px;
-}
-
-.nav-links a:hover {
-text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
+.header ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
 }
 
 
-header {
-background-color: #a567d8;
-color: white;
-padding: 15px;
-text-align: left;
-font-family: 'Arial', sans-serif; /* Adiciona a fonte Arial */
+#logo {
+    font-family: 'Satisfy', sans-serif;
+    font-weight: bolder;
+    font-size: 2rem;
+    color: var(--primaryGreen);
+    margin: 0;
 }
 
+.initial-section {
+    background: linear-gradient(rgba(0, 0, 0, 0.082), rgba(0, 0, 0, 0.24)), url("img/capa.png");
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white);
+}
+
+.title h1 {
+    font-family: 'Satisfy', sans-serif;
+    font-weight: 300;
+    font-size: 6rem;
+}
+
+.title p{
+    color: var(--white);
+    font-size: 1.2rem;
+}
