--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ main {
 }
 
 .initial-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.541)), url("img/capa2.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.541)), url("/assets/img/capa2.jpg");
     width: 100%;
     height: 100vh;
     background-position: center;
