--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -577,3 +577,90 @@ main {
 #contato button:hover {
     background-color:var(--primaryGreen);
 }
+
+/* Menu mobile */
+
+.menu-mobile {
+    background-color: #242325a1;
+    backdrop-filter: blur(10px);
+    color: #fff;
+    position: fixed;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    height: 0;
+    visibility: hidden;
+    transition: 0.5s;
+    overflow: hidden;
+    margin-right: 50%;
+}
+
+.menu-mobile.open {
+    visibility: visible;
+    height: auto;
+}
+
+.menu-mobile nav a {
+    color: var(--primaryPurple);
+    text-decoration: none;
+    display: block;
+    padding: 20px 30px;
+}
+
+.menu-mobile nav a:hover {
+    background-color: var(--secondaryPurple);
+}
+
+#btn-menu {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    background: transparent;
+    cursor: pointer;
+    display: none;
+}
+
+.line {
+    width: 15px;
+    height: 2px;
+    background-color: var(--primaryPurple);
+    display: block;
+    margin: 2px auto;
+    position: relative;
+    transform-origin: center;
+    transition: 0.2s;
+}
+
+#btn-menu.active .line:nth-child(1) {
+    transform: translateY(2px) rotate(-45deg);
+    background-color: var(--secondaryPurple);
+}
+
+#btn-menu.active .line:nth-child(3) {
+    transform: translateY(2px) rotate(45deg);
+    background-color: var(--secondaryPurple);
+}
+
+#btn-menu.active .line:nth-child(2){
+    display: none;
+}
+
+
+/*Menu mobile responsivo */
+@media screen and (max-width: 1030px) {
+    .menu {
+        display: none;
+    }
+
+    .menu-mobile.open {
+        visibility: visible;
+        height: 100vh;
+        margin-right: 50px;
+    }
+
+    #btn-menu {
+        display: block;
+    }
+    
+}
